Add kuvien support (Closes #7) (#8)
* Prettify and add kuvien

* Fix tigcap not setting kuvien api key header

* Fix kuvien uploader

--- a/web/settings.html
+++ b/web/settings.html
@@ -10,7 +10,7 @@
     <label for="img-host" id="img-host-label">Upload to Service</label>
       <select id="img-host">
         <option value="pomf">Pomf</option>
-        <option value="tig">The Image Guru</option>
+        <option value="kuvien">Kuvien</option>
         <option value="srht">SRHT</option>
         <option value="owo">OwO</option>
         <option value="nothingdomains">Nothing Domains</option>
@@ -23,6 +23,13 @@
       <div class="form-group">
         <label for="elixire_key">API Key</label><br class="elixire_only">
         <input type="password" id="elixire_key" value="Please wait"></input><br class="elixire_only">
+      </div>
+    </div>
+
+    <div class="kuvien_only">
+      <div class="form-group">
+        <label for="kuvien_key">API Key</label><br class="kuvien_only">
+        <input type="password" id="kuvien_key" value="Please wait"></input><br class="kuvien_only">
       </div>
     </div>
 
