--- a/web/settings.html
+++ b/web/settings.html
@@ -15,9 +15,17 @@
         <option value="owo">OwO</option>
         <option value="nothingdomains">Nothing Domains</option>
         <option value="elixire">elixi.re</option>
+        <option value="novus">i.novus</option>
       </select>
       <br>
     </section>
+
+    <div class="novus_only">
+      <div class="form-group">
+        <label for="novus_token">API Token</label><br class="novus_only">
+        <input type="password" id="novus_token" value="Please wait"></input><br class="novus_only">
+      </div>
+    </div>
 
     <div class="elixire_only">
       <div class="form-group">
