Possibly working idk I need to get this tested

--- a/web/settings.html
+++ b/web/settings.html
@@ -15,6 +15,7 @@
         <option value="owo">OwO</option>
         <option value="nothingdomains">Nothing Domains</option>
         <option value="elixire">elixi.re</option>
+        <option value="ftp">FTP</option>
       </select>
       <br>
     </section>
@@ -24,6 +25,29 @@
         <label for="elixire_key">API Key</label><br class="elixire_only">
         <input type="password" id="elixire_key" value="Please wait"></input><br class="elixire_only">
       </div>
+    </div>
+
+    <div class="ftp_only">
+      <div class="form-group">
+        <label for="ftp_hostname">FTP Hostname</label><br class="ftp_only">
+        <input type="text" id="ftp_hostname" value="Please wait"></input><br class="ftp_only">
+      </div>
+      <div class="form-group">
+        <label for="ftp_path">FTP Path</label><br class="ftp_only">
+        <input type="text" id="ftp_path" value="Please wait"></input><br class="ftp_only">
+      </div>
+      <div class="form-group">
+        <label for="ftp_url_path">FTP URL Path</label><br class="ftp_only">
+        <input type="text" id="ftp_url_path" value="Please wait"></input><br class="ftp_only">
+      </div>
+      <div class="form-group">
+        <label for="ftp_username">FTP Username</label><br class="ftp_only">
+        <input type="text" id="ftp_username" value="Please wait"></input><br class="ftp_only">
+      </div>
+      <div class="form-group">
+        <label for="ftp_password">FTP Password</label><br class="ftp_only">
+        <input type="password" id="ftp_password" value="Please wait"></input><br class="ftp_only">
+      </div> 
     </div>
 
     <div class="kuvien_only">
